Fix content block image - 60% width, centered with flexbox, no cutoff

--- a/css/styles.css
+++ b/css/styles.css
@@ -538,14 +538,19 @@ p {
 }
 
 .content-block__image-photo {
-  max-width: 200px;
+  width: 60%;
+  height: auto;
   object-fit: contain;
-  margin: auto;
   display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: auto;
+  padding: 2rem;
+  box-sizing: border-box;
+}
+
+.content-block__image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .content-block__text {
